cluster/databases/milvus/milvus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: milvus
  namespace: milvus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - milvus.home.mcztest.com
    secretName: milvus-tls
  rules:
  - host: milvus.home.mcztest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: milvus
            port:
              number: 9091
